
idf_component_register(
    SRCS
        main.cc
        main_functions.cc
        constants.cc
        output_handler.cc
        model.cc
        led_manager.cc
        serial_commands.cc
        drive_system/drive_system.cc
        drive_system/depth_sensor.cc
        sdcard/sd.cc
    PRIV_REQUIRES
        spi_flash
    REQUIRES
        esp_driver_gpio
        esp_driver_uart
        esp_driver_mcpwm
        esp_adc
        esp_driver_sdmmc
        fatfs
        sd_card
)